--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>853</width>
-    <height>415</height>
+    <width>800</width>
+    <height>410</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>410</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>410</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MicroVu 1Factory Processor</string>
@@ -128,19 +140,19 @@
      <rect>
       <x>20</x>
       <y>160</y>
-      <width>600</width>
+      <width>760</width>
       <height>158</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>600</width>
+      <width>760</width>
       <height>0</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>500</width>
+      <width>760</width>
       <height>16777215</height>
      </size>
     </property>
@@ -164,6 +176,11 @@
       <string>IsProfile</string>
      </property>
     </column>
+    <column>
+     <property name="text">
+      <string>SmartProfileFileName</string>
+     </property>
+    </column>
     <item row="0" column="0">
      <property name="text">
       <string/>
@@ -174,7 +191,7 @@
     <property name="geometry">
      <rect>
       <x>680</x>
-      <y>290</y>
+      <y>330</y>
       <width>100</width>
       <height>23</height>
      </rect>
@@ -195,7 +212,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>853</width>
+     <width>800</width>
      <height>21</height>
     </rect>
    </property>
