--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -48,20 +48,6 @@
      <property name="verticalSpacing">
       <number>0</number>
      </property>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Initials:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="4">
-      <widget class="QToolButton" name="btnSelectOutputFolder">
-       <property name="text">
-        <string>...</string>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="0">
       <widget class="QLabel" name="OpNumberLabel">
        <property name="text">
@@ -69,31 +55,12 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
-      <widget class="QLineEdit" name="txtInitials">
-       <property name="maximumSize">
-        <size>
-         <width>50</width>
-         <height>16777215</height>
-        </size>
+     <item row="1" column="5">
+      <widget class="QToolButton" name="btnSelectOutputFolder">
+       <property name="text">
+        <string>...</string>
        </property>
       </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QLineEdit" name="txtInputFolder"/>
-     </item>
-     <item row="3" column="2">
-      <widget class="QLineEdit" name="txtOpNumber">
-       <property name="maximumSize">
-        <size>
-         <width>50</width>
-         <height>16777215</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QLineEdit" name="txtOutputFolder"/>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
@@ -102,14 +69,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Output Folder:  </string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="4">
+     <item row="0" column="5">
       <widget class="QToolButton" name="btnSelectInputFolder">
        <property name="text">
         <string>...</string>
@@ -123,7 +83,34 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="2">
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Initials:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="txtInitials">
+       <property name="maximumSize">
+        <size>
+         <width>50</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="txtOpNumber">
+       <property name="maximumSize">
+        <size>
+         <width>50</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
       <widget class="QLineEdit" name="txtRevNumber">
        <property name="maximumSize">
         <size>
@@ -133,15 +120,18 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="txtInputFolder"/>
+     </item>
     </layout>
    </widget>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>160</y>
+      <y>187</y>
       <width>760</width>
-      <height>158</height>
+      <height>141</height>
      </rect>
     </property>
     <property name="minimumSize">
@@ -204,6 +194,22 @@
     </property>
     <property name="text">
      <string>Do It.</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="chkSelectAll">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>160</y>
+      <width>70</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
